--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@solana/spl-token": "0.0.13",
     "@solana/web3.js": "^0.87.0",
+    "bip32": "^2.0.6",
+    "bip39": "^3.0.2",
     "bn.js": "^5.1.3",
+    "tweetnacl": "^1.0.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
