--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@project-serum/pool": "^0.1.4",
     "@solana/spl-token": "0.0.13",
     "@solana/web3.js": "^0.87.0",
     "bip32": "^2.0.6",
